<resources>
    <string name="app_name">LC Sports</string>
    <string name="bem_vindo">Bem-vindo</string>
    <string name="user_email">usuário ou email</string>
    <string name="senha">Senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="cpf">CPF</string>
    <string name="cep">CEP</string>
    <string name="uf">UF</string>
    <string name="cidade">Cidade</string>
    <string name="tel">Telefone</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="titulo_favoritos">Favoritos</string>
    <string name="titulo_feed">Melhor da semana</string>
    <string name="title_activity_cadastro">tela de cadastro</string>
    <string name="title_home">Home</string>
    <string name="edtPerfil">Editar Perfil</string>
    <string name="bio">Biografia</string>
    <string name="ctt">Contatos</string>
    <string name="anuncios">Anúncios</string>
    <string name="meusanuncios">Meus anúncios</string>
    <string name="fut">Futebol</string>
    <string name="volei">Vôlei</string>
    <string name="bsqt">Basquete</string>
    <string name="hdbol">Handebol</string>
    <string name="ntc">Natação</string>
    <string name="atlet">Atletismo</string>
    <string name="ga">Ginástica Artística</string>
    <string name="gr">Ginástica Rítmica</string>
    <string name="am">Artes Marciais</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="tenis">Tênis</string>
    <string name="tm">Tênis de mesa</string>
    <string name="pa">Polo Aquático</string>
    <string name="surf">Surfe</string>
    <string name="upload">Fazer uploud</string>
    <string name="salvar">Salvar</string>
    <string name="titulo">Título da postagem</string>
    <string name="desc">Descrição do produto</string>
    <string name="categoria">Categoria do produto</string>
    <string name="selecione">Selecione</string>
    <string name="img">Imagem</string>
    <string name="postar">Postar</string>
    <string name="visu">Visualizações:</string>
    <string name="numvisu">0</string>
    <string name="pessoasatingidas">Pessoas atingidas:</string>
    <string name="serpremium">Ser Premium</string>
    <string name="qrcode">Pagar com QrCODE</string>
    <string name="pdf">Gerar pdf</string>
    <string name="semdesc">Este produto não contém descrição!</string>
    <string name="sememail">email@email.com</string>
    <string name="sembio">Essa costureira ainda não adicionou uma biografia</string>
    <string name="semnum">XX XXXX-XXXXX</string>
    <string name="hintbio">Digite sua biografia aqui...</string>
    <string name="hintnum">Digite seu número...</string>
    <string name="hintemail">Digite seu e-mail...</string>
</resources>
