<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categorias">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout style="@style/header">

            <ImageView
                style="@style/home"
                android:id="@+id/bt_home"
                />

            <ImageView
                style="@style/lupa"
                android:id="@+id/bt_lupa"
                />

            <ImageView
                style="@style/premium"
                android:id="@+id/bt_home2"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/primary_color">

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/fut"
                        android:id="@+id/futebol"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/volei"
                        android:id="@+id/volei"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/bsqt"
                        android:id="@+id/basquete"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/hdbol"
                        android:id="@+id/handebol"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/ntc"
                        android:id="@+id/natacao"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/atlet"
                        android:id="@+id/atletismo"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/ga"
                        android:id="@+id/ginastica_artistica"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/gr"
                        android:id="@+id/ginastica_ritmica"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/am"
                        android:id="@+id/artes_marciais"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/ciclismo"
                        android:id="@+id/ciclismo"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/tenis"
                        android:id="@+id/tenis"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/tm"
                        android:id="@+id/tenis_de_mesa"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/pa"
                        android:id="@+id/polo_aquatico"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/card_categoria">

                    <TextView
                        style="@style/txt_categoria"
                        android:text="@string/surf"
                        android:id="@+id/surfe"
                        />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout style="@style/footer"
            tools:ignore="MissingConstraints">

            <ImageView
                style="@style/favoritos"
                android:id="@+id/bt_favoritos"/>

            <ImageView
                style="@style/publicar"
                android:id="@+id/bt_publicar"/>

            <ImageView
                style="@style/perfil"
                android:id="@+id/bt_perfil"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>