<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo" />

            <TextView
                style="@style/titulos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bem_vindo" />

            <TextView
                style="@style/texto_auxiliar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                />

            <EditText
                style="@style/inputs"
                android:id="@+id/et_email"
                android:text="mario100@email.com"
                />

            <TextView
                style="@style/texto_auxiliar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                />

            <EditText
                style="@style/inputs"
                android:inputType="textPassword"
                android:id="@+id/et_senha"
                android:text="123456"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/botoes"
                android:text="Entrar"
                android:id="@+id/bt_logar"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Não tem uma conta?"
                style="@style/texto_branco"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cadastre-se"
                android:id="@+id/txt_cadastro"
                style="@style/texto_azul"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>