<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarPostagem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout style="@style/header">

            <ImageView
                style="@style/home"
                android:id="@+id/bt_home"
                />

            <ImageView
                style="@style/lupa"
                android:id="@+id/bt_lupa"
                />

            <ImageView
                style="@style/premium"
                android:id="@+id/bt_home2"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    style="@style/texto_azul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo"
                    android:textColor="@color/primary_color"
                    android:textFontWeight="1"
                    android:textSize="25dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/etTitulo"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:hint="Digite o título aqui..."
                    android:background="@drawable/edittext_border"
                    android:padding="5dp"
                    android:lines="1"
                    />

                <TextView
                    style="@style/texto_azul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:textColor="@color/primary_color"
                    android:textFontWeight="1"
                    android:textSize="25dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/etDescricao"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:hint="Digite uma descrição aqui..."
                    android:background="@drawable/edittext_border"
                    android:padding="5dp"
                    android:lines="4"
                    />

                <TextView
                    style="@style/texto_azul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria"
                    android:textColor="@color/primary_color"
                    android:textFontWeight="1"
                    android:textSize="25dp"
                    android:layout_marginTop="10dp"/>

                <Spinner
                    android:id="@+id/opcoesCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_categorias"
                    android:background="@drawable/edittext_border"
                    android:backgroundTint="@color/terciary_color"
                    android:textAlignment="center"
                    />

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@mipmap/padrao"/>

                <Button
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:textSize="15sp"
                    android:backgroundTint="@color/primary_color"
                    android:id="@+id/btnUpload"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postar"
                    android:textSize="15sp"
                    android:backgroundTint="@color/terciary_color"
                    android:layout_marginTop="10dp"/>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout style="@style/footer"
        tools:ignore="MissingConstraints">

        <ImageView
            style="@style/favoritos"
            android:id="@+id/bt_favoritos"/>

        <ImageView
            style="@style/publicar"
            android:id="@+id/bt_publicar"/>

        <ImageView
            style="@style/perfil"
            android:id="@+id/bt_perfil"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>