<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfil">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout style="@style/header">

            <ImageView
                style="@style/home"
                android:id="@+id/bt_home"
                />

            <ImageView
                style="@style/lupa"
                android:id="@+id/bt_lupa"
                />

            <ImageView
                style="@style/logo"
                android:id="@+id/bt_home2"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/padraoeditar"
                    android:alpha="0.3"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:textSize="15sp"
                    android:backgroundTint="@color/primary_color"/>

                <TextView
                    style="@style/texto_azul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textColor="@color/primary_color"
                    android:textFontWeight="1"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/etBiografia"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:hint="Digite sua biografia aqui..."
                    android:background="@drawable/edittext_border"
                    android:padding="5dp"
                    android:lines="4"
                    />

                <TextView
                    style="@style/texto_azul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ctt"
                    android:textColor="@color/primary_color"
                    android:textFontWeight="1"
                    android:textSize="25dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/whatsapp"
                            android:layout_marginRight="3dp"/>

                        <EditText
                            android:id="@+id/etWpp"
                            android:layout_width="270dp"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:gravity="top|start"
                            android:hint="Digite seu número..."
                            android:background="@drawable/edittext_border"
                            android:padding="5dp"
                            android:lines="1" />

                    </LinearLayout>

                    <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/email"
                        android:layout_marginRight="3dp"/>

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:gravity="top|start"
                        android:hint="Digite seu número..."
                        android:background="@drawable/edittext_border"
                        android:padding="5dp"
                        android:lines="1"
                        android:layout_marginTop="5dp"
                        />

                </LinearLayout>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/terciary_color"/>



            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout style="@style/footer"
        tools:ignore="MissingConstraints">

        <ImageView
            style="@style/favoritos"
            android:id="@+id/bt_favoritos"/>

        <ImageView
            style="@style/publicar"
            android:id="@+id/bt_publicar"/>

        <ImageView
            style="@style/perfil"
            android:id="@+id/bt_perfil"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>